Archive2/36/6b2ed145d924a5/output
main.cpp:26:16: error: no type named 'type' in 'struct std::enable_if<false, void>'
 class vec_t<int> {};
                ^
main.cpp:26:16: error: template argument 2 is invalid
main.cpp:29:25: error: no type named 'type' in 'struct std::enable_if<false, void>'
 class vec_t<int,check_t<int>> {};
                         ^
main.cpp:29:25: error: template argument 2 is invalid
main.cpp:29:28: error: template argument 2 is invalid
 class vec_t<int,check_t<int>> {};
                            ^
main.cpp: In function 'void test()':
main.cpp:35:14: error: no type named 'type' in 'struct std::enable_if<false, void>'
     vec_t<int> veci;
              ^
main.cpp:35:14: error: template argument 2 is invalid
main.cpp:35:20: error: invalid type in declaration before ';' token
     vec_t<int> veci;
                    ^
main.cpp:34:18: warning: unused variable 'vecf' [-Wunused-variable]
     vec_t<float> vecf;
                  ^
main.cpp:35:16: warning: unused variable 'veci' [-Wunused-variable]
     vec_t<int> veci;
                ^
